<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_fav_filled"
            android:title="@string/app_shortcut_favourites_title" />
    </group>

    <item android:title="@string/menu_explore">

        <menu>

            <item
                android:id="@+id/nav_movies"
                android:icon="@drawable/ic_movie"
                android:title="@string/movies_list_header" />

        </menu>

    </item>

    <item android:title="@string/menu_go_premium">
        <menu>
            <item
                android:id="@+id/nav_premium"
                android:icon="@drawable/ic_crown"
                android:title="@string/menu_premium" />
        </menu>
    </item>

    <item android:title="@string/menu_social">

        <menu>

            <item
                android:id="@+id/nav_instagram"
                android:icon="@drawable/ic_instagram"
                android:title="@string/menu_social_instagram" />

        </menu>

    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>